--- a/css/style.css
+++ b/css/style.css
@@ -67,11 +67,11 @@ a {
 .leadership .tabs-content h2:after,
 .leadership .tabs-content h5:after, .people-list .people-list-content .owl-nav .owl-next, .people-list.blue .owl-nav .owl-next:hover, .tabbed-content-wrapper .tabbed-content-list-wrapper .tabbed-content-list h5:after, .membership .membership-content .item:after, .membership .membership-content .owl-nav .owl-next, .full-width-tabs-wrapper h4:after, .two-columns-wrapper .owl-nav .owl-next:hover, .pillars .tabs-content h2:after, .opportunities .tabs-content h2:after, .country-addresses-wrapper .countries h4:after, .investors-wrapper .tabs-content h3:after, .svg-arrow-right-light-green, .full-width-tabs-wrapper h4:hover:after, .country-addresses-wrapper .countries h4:hover:after, .svg-arrow-right-white, .footer .footer-links h5:after, .insights-wrapper .insights-list .owl-nav .owl-next, .people-list.blue .owl-nav .owl-next, .table-view .table-view-content .collapsable-table h3:after, .table-view .table-view-content .collapsable-table .sub-tables h4:after, .table-view .table-view-content .dataTables_wrapper .dataTables_paginate .fg-button.next:hover:after, .two-columns-wrapper .owl-nav .owl-next, .teams-wrapper .teams-content .collapsed-list .list-item h3:after, .svg-arrow-up, .svg-audio-pause, .jp-audio .jp-controls .jp-pause, .svg-audio-play, .jp-audio .jp-controls .jp-play, .svg-backward-10, .jp-audio .jp-controls .jp-backward, .svg-burger, .svg-checkbox, .subscribe-form .checkbox,
 .subscribe-lightbox .checkbox, .svg-checkbox-checked, .subscribe-form .checkbox.checked,
-.subscribe-lightbox .checkbox.checked, .svg-chevron, form.search .form-content .search-types-toggle:after, .svg-chevron-green, form.search .form-content .search-types-toggle:hover:after, .svg-close, form.search .form-content .close, .ui-widget.ui-dialog .ui-dialog-titlebar .ui-icon-closethick, .svg-close-black, .ui-widget.ui-dialog .ui-dialog-titlebar .ui-icon-closethick:hover, .svg-close-blue, form.search .form-content .close:hover, .svg-download, .download:before, .svg-download-blue, .download:hover:before, .svg-ellipse, .hero-slides.owl-carousel .owl-dot, .svg-ellipse-empty, .hero-slides.owl-carousel .owl-dot:hover, .svg-ellipse-selected, .hero-slides.owl-carousel .owl-dot.active, .svg-facebook, .footer .social-links .facebook, .hero-slides-wrapper .social-links .facebook, .page-hero .social-links .facebook, .svg-facebook-green-fill, .two-column-content-wrapper .social-links .facebook:hover, .memo-wrapper .social-links .facebook:hover,
+.subscribe-lightbox .checkbox.checked, .svg-chevron, form.search .form-content .search-types-toggle:after, .svg-chevron-green, form.search .form-content .search-types-toggle:hover:after, .svg-close, form.search .form-content .close, .ui-widget.ui-dialog .ui-dialog-titlebar .ui-icon-closethick, .svg-close-black, .ui-widget.ui-dialog .ui-dialog-titlebar .ui-icon-closethick:hover, .svg-close-blue, form.search .form-content .close:hover, .svg-download, .download:before, .svg-download-blue, .svg-ellipse, .hero-slides.owl-carousel .owl-dot, .svg-ellipse-empty, .hero-slides.owl-carousel .owl-dot:hover, .svg-ellipse-selected, .hero-slides.owl-carousel .owl-dot.active, .svg-facebook, .footer .social-links .facebook, .hero-slides-wrapper .social-links .facebook, .page-hero .social-links .facebook, .svg-facebook-green-fill, .two-column-content-wrapper .social-links .facebook:hover, .memo-wrapper .social-links .facebook:hover,
 .article-wrapper .social-links .facebook:hover, .country-addresses-wrapper .social-links .facebook:hover, .svg-facebook-green-outline, .two-column-content-wrapper .social-links .facebook, .memo-wrapper .social-links .facebook,
-.article-wrapper .social-links .facebook, .country-addresses-wrapper .social-links .facebook, .svg-facebook-white, .footer .social-links .facebook:hover, .hero-slides-wrapper .social-links .facebook:hover, .page-hero .social-links .facebook:hover, .svg-folder, .archived:before, .svg-folder-blue, .archived:hover:before, .svg-forward-30, .jp-audio .jp-controls .jp-forward, .svg-info, .warning-message .info:before, .svg-insights-article, .insights-wrapper .article, .insights-list-wrapper .article, .svg-insights-article-hover, .insights-wrapper .img-wrapper:hover .article, .insights-list-wrapper .img-wrapper:hover .article, .svg-insights-audio, .insights-wrapper .audio, .insights-list-wrapper .audio, .svg-insights-audio-hover, .insights-wrapper .img-wrapper:hover .audio, .insights-list-wrapper .img-wrapper:hover .audio, .svg-insights-video, .insights-wrapper .video, .insights-list-wrapper .video, .svg-insights-video-hover, .insights-wrapper .img-wrapper:hover .video, .insights-list-wrapper .img-wrapper:hover .video, .svg-linkedin, .footer .social-links .linkedin, .hero-slides-wrapper .social-links .linkedin, .page-hero .social-links .linkedin, .svg-linkedin-green-fill, .two-column-content-wrapper .social-links .linkedin:hover, .memo-wrapper .social-links .linkedin:hover,
+.article-wrapper .social-links .facebook, .country-addresses-wrapper .social-links .facebook, .svg-facebook-white, .footer .social-links .facebook:hover, .hero-slides-wrapper .social-links .facebook:hover, .page-hero .social-links .facebook:hover, .svg-folder, .archived:before, .svg-folder-blue, .svg-forward-30, .jp-audio .jp-controls .jp-forward, .svg-info, .warning-message .info:before, .svg-insights-article, .insights-wrapper .article, .insights-list-wrapper .article, .svg-insights-article-hover, .insights-wrapper .img-wrapper:hover .article, .insights-list-wrapper .img-wrapper:hover .article, .svg-insights-audio, .insights-wrapper .audio, .insights-list-wrapper .audio, .svg-insights-audio-hover, .insights-wrapper .img-wrapper:hover .audio, .insights-list-wrapper .img-wrapper:hover .audio, .svg-insights-video, .insights-wrapper .video, .insights-list-wrapper .video, .svg-insights-video-hover, .insights-wrapper .img-wrapper:hover .video, .insights-list-wrapper .img-wrapper:hover .video, .svg-linkedin, .footer .social-links .linkedin, .hero-slides-wrapper .social-links .linkedin, .page-hero .social-links .linkedin, .svg-linkedin-green-fill, .two-column-content-wrapper .social-links .linkedin:hover, .memo-wrapper .social-links .linkedin:hover,
 .article-wrapper .social-links .linkedin:hover, .country-addresses-wrapper .social-links .linkedin:hover, .svg-linkedin-green-outline, .two-column-content-wrapper .social-links .linkedin, .memo-wrapper .social-links .linkedin,
-.article-wrapper .social-links .linkedin, .country-addresses-wrapper .social-links .linkedin, .svg-linkedin-white, .footer .social-links .linkedin:hover, .hero-slides-wrapper .social-links .linkedin:hover, .page-hero .social-links .linkedin:hover, .svg-listen, .listen:before, .svg-listen-blue, .listen:hover:before, .svg-mail-green-fill, .memo-wrapper .social-links .mail:hover,
+.article-wrapper .social-links .linkedin, .country-addresses-wrapper .social-links .linkedin, .svg-linkedin-white, .footer .social-links .linkedin:hover, .hero-slides-wrapper .social-links .linkedin:hover, .page-hero .social-links .linkedin:hover, .svg-listen, .listen:before, .svg-listen-blue, .svg-mail-green-fill, .memo-wrapper .social-links .mail:hover,
 .article-wrapper .social-links .mail:hover, .svg-mail-green-outline, .memo-wrapper .social-links .mail,
 .article-wrapper .social-links .mail, .svg-map-icon, .fullimage-block .list li:before, .country-addresses-wrapper .countries .addresses li:before, .svg-search, form.search .form-content .do-search, .table-view .table-view-content .table-filters .search-filter-wrapper button.search, .svg-search-blue, form.search .form-content .do-search:hover, .table-view .table-view-content .table-filters .search-filter-wrapper button.search:hover, .svg-search-icon, .actions-nav .action-search, .svg-search-icon-hover, .actions-nav .action-search:hover, .actions-nav .action-search.active, .svg-search-type-all, form.search .form-content .search-types .all label:before, form.search .form-content .search-types-toggle.all, .svg-search-type-insights, form.search .form-content .search-types .insights label:before, form.search .form-content .search-types-toggle.insights, .svg-search-type-people, form.search .form-content .search-types .people label:before, form.search .form-content .search-types-toggle.people, .svg-search-type-strategies, form.search .form-content .search-types .strategies label:before, form.search .form-content .search-types-toggle.strategies, .svg-twitter, .footer .social-links .twitter, .hero-slides-wrapper .social-links .twitter, .page-hero .social-links .twitter, .svg-twitter-green-fill, .two-column-content-wrapper .social-links .twitter:hover, .memo-wrapper .social-links .twitter:hover,
 .article-wrapper .social-links .twitter:hover, .country-addresses-wrapper .social-links .twitter:hover, .svg-twitter-green-outline, .two-column-content-wrapper .social-links .twitter, .memo-wrapper .social-links .twitter,
@@ -323,7 +323,7 @@ a {
   height: 24px;
 }
 
-.svg-download-blue, .download:hover:before {
+.svg-download-blue {
   background-position: 0 100%;
 }
 
@@ -406,7 +406,7 @@ a {
   height: 18px;
 }
 
-.svg-folder-blue, .archived:hover:before {
+.svg-folder-blue {
   background-position: 53.65853658536585% 46.864686468646866%;
 }
 
@@ -534,7 +534,7 @@ a {
   height: 24px;
 }
 
-.svg-listen-blue, .listen:hover:before {
+.svg-listen-blue {
   background-position: 98.14814814814815% 49.158249158249156%;
 }
 
@@ -953,7 +953,7 @@ a {
 
 .scrollbar-outer > .scroll-element.scroll-x {
   bottom: 0;
-  height: 12px;
+  height: 6px;
   left: 0;
   width: 100%;
 }
@@ -962,17 +962,17 @@ a {
   height: 100%;
   right: 0;
   top: 0;
-  width: 12px;
+  width: 6px;
 }
 
 .scrollbar-outer > .scroll-element.scroll-x .scroll-element_outer {
-  height: 8px;
+  height: 4px;
   top: 2px;
 }
 
 .scrollbar-outer > .scroll-element.scroll-y .scroll-element_outer {
   left: 2px;
-  width: 8px;
+  width: 4px;
 }
 
 .scrollbar-outer > .scroll-element .scroll-element_outer {
@@ -980,7 +980,7 @@ a {
 }
 
 .scrollbar-outer > .scroll-element .scroll-element_track {
-  background-color: #eeeeee;
+  background-color: transparent;
 }
 
 .scrollbar-outer > .scroll-element .scroll-element_outer,
@@ -1015,11 +1015,11 @@ a {
 }
 
 .scrollbar-outer > .scroll-element.scroll-x .scroll-bar {
-  min-width: 10px;
+  min-width: 4px;
 }
 
 .scrollbar-outer > .scroll-element.scroll-y .scroll-bar {
-  min-height: 10px;
+  min-height: 4px;
 }
 
 /* update scrollbar offset if both scrolls are visible */
@@ -3057,7 +3057,7 @@ body {
   line-height: 32px !important;
 }
 .insights-wrapper .title-link:hover {
-  text-decoration: underline;
+  color: #388067;
 }
 .insights-wrapper .img-wrapper {
   max-width: 344px;
@@ -3497,6 +3497,16 @@ body {
   text-align: center;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .featured-stats-wrapper .featured-stats .value {
+    font-size: 40px;
+    line-height: 59px;
+  }
+  .featured-stats-wrapper .featured-stats .description {
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
 @media screen and (max-width: 767px) {
   .featured-stats-wrapper .featured-stats {
     flex-direction: column;
@@ -4232,6 +4242,7 @@ body {
   padding: 0;
 }
 
+#sf-country-menu,
 #memo-archives-filter-menu,
 #insights-filter-menu,
 #location-filter-menu,
@@ -4239,7 +4250,9 @@ body {
   border: 0 none;
   box-shadow: 0px 9px 15px rgba(0, 0, 0, 0.1);
   padding: 20px 27px;
+  text-align: left;
 }
+#sf-country-menu .ui-menu-item .ui-menu-item-wrapper,
 #memo-archives-filter-menu .ui-menu-item .ui-menu-item-wrapper,
 #insights-filter-menu .ui-menu-item .ui-menu-item-wrapper,
 #location-filter-menu .ui-menu-item .ui-menu-item-wrapper,
@@ -4253,6 +4266,7 @@ body {
   letter-spacing: 0.05em;
   text-transform: capitalize;
 }
+#sf-country-menu .ui-menu-item .ui-menu-item-wrapper.ui-state-active,
 #memo-archives-filter-menu .ui-menu-item .ui-menu-item-wrapper.ui-state-active,
 #insights-filter-menu .ui-menu-item .ui-menu-item-wrapper.ui-state-active,
 #location-filter-menu .ui-menu-item .ui-menu-item-wrapper.ui-state-active,
@@ -6070,7 +6084,7 @@ body {
   line-height: 32px !important;
 }
 .insights-list-wrapper .title-link:hover {
-  text-decoration: underline;
+  color: #388067;
 }
 .insights-list-wrapper .img-wrapper {
   max-width: 344px;
@@ -6174,6 +6188,7 @@ body {
   line-height: 22px;
   letter-spacing: 0.03em;
   text-decoration: none;
+  transition: transform .2s ease;
 }
 .listen:before,
 .download:before,
@@ -6184,27 +6199,10 @@ body {
   top: 50%;
   transform: translateY(-50%);
 }
-.listen:after,
-.download:after,
-.archived:after {
-  background: #388067;
-  border-radius: 2px;
-  content: '';
-  bottom: -5px;
-  left: 0;
-  height: 2px;
-  display: block;
-  position: absolute;
-  width: 100%;
-  transform-origin: 100% 50%;
-  transform: scaleX(0);
-  transition: transform .2s ease;
-}
-.listen:hover:after,
-.download:hover:after,
-.archived:hover:after {
-  transform: scaleX(1);
-  transform-origin: 0 50%;
+.listen:hover,
+.download:hover,
+.archived:hover {
+  color: #388067;
 }
 
 .memo-wrapper,
@@ -6465,10 +6463,37 @@ body {
 .subscribe-form,
 .subscribe-lightbox {
   padding: 0 !important;
+  overflow: hidden !important;
+}
+.subscribe-form .form-wrapper,
+.subscribe-lightbox .form-wrapper {
+  max-width: 460px;
+  height: 100%;
+  padding: 30px 40px !important;
+  width: 100%;
+}
+.subscribe-form .form-wrapper form,
+.subscribe-lightbox .form-wrapper form {
+  max-width: 365px;
+}
+.subscribe-form .form-wrapper.has-scrollbar,
+.subscribe-lightbox .form-wrapper.has-scrollbar {
+  padding-right: 20px !important;
+}
+.subscribe-form .form-wrapper.has-scrollbar form,
+.subscribe-lightbox .form-wrapper.has-scrollbar form {
+  max-width: 385px;
+}
+.subscribe-form .form-wrapper .scroll-content,
+.subscribe-lightbox .form-wrapper .scroll-content {
+  max-width: calc(100% - 12%) !important;
+}
+.subscribe-form .img-wrapper,
+.subscribe-lightbox .img-wrapper {
+  background: transparent url("../content/subscribe.jpg") no-repeat center/cover;
 }
 .subscribe-form form,
 .subscribe-lightbox form {
-  padding: 30px 40px;
   max-width: 460px;
   color: #000;
   font-style: normal;
@@ -6523,6 +6548,15 @@ body {
 .subscribe-form input.text-field:focus,
 .subscribe-lightbox input.text-field:focus {
   border: 1px solid #388067;
+}
+.subscribe-form .dropdown-filter-wrapper.has-value #sf-country-button,
+.subscribe-lightbox .dropdown-filter-wrapper.has-value #sf-country-button {
+  color: #000;
+}
+.subscribe-form .ui-selectmenu-menu.ui-selectmenu-open,
+.subscribe-lightbox .ui-selectmenu-menu.ui-selectmenu-open {
+  overflow: auto;
+  max-width: 100%;
 }
 .subscribe-form #sf-country-button,
 .subscribe-lightbox #sf-country-button {
@@ -6610,7 +6644,7 @@ body {
   }
 }
 .ui-selectmenu-menu.ui-selectmenu-open {
-  z-index: 999;
+  z-index: 9999;
 }
 
 .ui-widget-overlay {
@@ -6798,7 +6832,6 @@ body {
 @media screen and (max-width: 767px) {
   .insights-list-wrapper .insights-list {
     margin: 25px -15px 10px;
-    justify-content: center;
   }
   .insights-list-wrapper .insights-list .insight-item {
     margin: 25px 15px;
@@ -7966,6 +7999,7 @@ body {
   }
   .pillars .tabs-content .content ul li {
     margin: 0 7px 59px;
+    width: calc(50% - 14px);
   }
   .pillars .tabs-content h2,
   .pillars .tabs-content h5 {
@@ -8084,6 +8118,14 @@ body .ui-tooltip.ui-widget-content {
   letter-spacing: 0.03em;
 }
 
+@media screen and (max-width: 767px) {
+  body .ui-tooltip.ui-widget-content {
+    max-width: 150px;
+    padding: 10px 15px;
+    font-size: 14px;
+    line-height: 21px;
+  }
+}
 .has-arrow .ui-tooltip-content::after, .has-arrow .ui-tooltip-content::before {
   top: 100%;
   border: solid transparent;
@@ -9675,6 +9717,11 @@ body .ui-tooltip.ui-widget-content {
 }
 .jp-audio .jp-time-left {
   margin-right: -10px;
+}
+
+.ui-dialog.subscribe-popup {
+  max-height: 90%;
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=style.css.map */
