--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -508,7 +508,7 @@ body {
 		line-height: 32px !important;
 
 		&:hover {
-			text-decoration: underline;
+			color: #388067;
 		}
 	}
 
@@ -1120,6 +1120,22 @@ body {
 			font-size: 22px;
 			line-height: 22px;
 			text-align: center;
+		}
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+	.featured-stats-wrapper {
+		.featured-stats {
+			.value {
+				font-size: 40px;
+				line-height: 59px;
+			}
+
+			.description {
+				font-size: 18px;
+				line-height: 22px;
+			}
 		}
 	}
 }
@@ -2040,6 +2056,7 @@ body {
 	}
 }
 
+#sf-country-menu,
 #memo-archives-filter-menu,
 #insights-filter-menu,
 #location-filter-menu,
@@ -2048,6 +2065,7 @@ body {
 	box-shadow: 0px 9px 15px rgba(0, 0, 0, 0.1);
 
 	padding: 20px 27px;
+	text-align: left;
 
 	.ui-menu-item .ui-menu-item-wrapper {
 		padding: 0;
@@ -4492,7 +4510,7 @@ body {
 		line-height: 32px !important;
 
 		&:hover {
-			text-decoration: underline;
+			color: #388067;
 		}
 	}
 
@@ -4648,6 +4666,8 @@ body {
 	line-height: 22px;
 	letter-spacing: 0.03em;
 	text-decoration: none;
+	
+	transition: transform .2s ease;
 
 	&:before {
 		content: '';
@@ -4659,28 +4679,8 @@ body {
 		transform: translateY(-50%);
 	}
 
-	&:after {
-		background: #388067;
-		border-radius: 2px;
-		content: '';
-
-		bottom: -5px;
-		left: 0;
-		height: 2px;
-		display: block;
-		position: absolute;
-		width: 100%;
-
-		transform-origin: 100% 50%;
-		transform: scaleX(0);
-		transition: transform .2s ease;
-	}
-
 	&:hover {
-		&:after {
-			transform: scaleX(1);
-			transform-origin: 0 50%;
-		}
+		color: #388067;
 	}
 }
 
@@ -4690,11 +4690,11 @@ body {
 		@extend .svg-download-dims;
 	}
 
-	&:hover {
-		&:before {
-			@extend .svg-download-blue;
-		}
-	}
+	// &:hover {
+	// 	&:before {
+	// 		@extend .svg-download-blue;
+	// 	}
+	// }
 }
 
 .listen {
@@ -4703,11 +4703,11 @@ body {
 		@extend .svg-listen-dims;
 	}
 
-	&:hover {
-		&:before {
-			@extend .svg-listen-blue;
-		}
-	}
+	// &:hover {
+	// 	&:before {
+	// 		@extend .svg-listen-blue;
+	// 	}
+	// }
 }
 
 .archived {
@@ -4716,11 +4716,11 @@ body {
 		@extend .svg-folder-dims;
 	}
 
-	&:hover {
-		&:before {
-			@extend .svg-folder-blue;
-		}
-	}
+	// &:hover {
+	// 	&:before {
+	// 		@extend .svg-folder-blue;
+	// 	}
+	// }
 }
 
 .memo-wrapper,
@@ -5026,9 +5026,36 @@ body {
 .subscribe-form,
 .subscribe-lightbox {
 	padding: 0 !important;
+	overflow: hidden !important;
+
+	.form-wrapper {
+		max-width: 460px;
+		height: 100%;
+		padding: 30px 40px !important;
+		width: 100%;
+
+		form {
+			max-width: 365px;
+		}
+
+		&.has-scrollbar {
+			padding-right: 20px !important;
+
+			form {
+				max-width: 385px;
+			}
+		}
+
+		.scroll-content {
+			max-width: calc(100% - 12%) !important;
+		}
+	}
+
+	.img-wrapper {
+		background: transparent url('../content/subscribe.jpg') no-repeat center / cover;
+	}
 
 	form {
-		padding: 30px 40px;
 		max-width: 460px;
 
 		color: #000;
@@ -5088,6 +5115,19 @@ body {
 		&:focus {
 			border: 1px solid #388067;
 		}
+	}
+
+	.dropdown-filter-wrapper {
+		&.has-value {
+			#sf-country-button {
+				color: #000;
+			}
+		}
+	}
+
+	.ui-selectmenu-menu.ui-selectmenu-open {
+		overflow: auto;
+		max-width: 100%;
 	}
 
 	#sf-country-button {
@@ -5204,7 +5244,7 @@ body {
 }
 
 .ui-selectmenu-menu.ui-selectmenu-open {
-	z-index: 999;
+	z-index: 9999;
 }
 
 .ui-widget-overlay {
@@ -5451,7 +5491,6 @@ body {
 	.insights-list-wrapper {
 		.insights-list {
 			margin: 25px -15px 10px;
-			justify-content: center;
 
 			.insight-item {
 				margin: 25px 15px;
@@ -6976,6 +7015,7 @@ body {
 
 					li {
 						margin: 0 7px 59px;
+						width: calc(50% - 14px);
 					}
 				}
 			}
@@ -7135,6 +7175,16 @@ body .ui-tooltip.ui-widget-content {
 	font-size: 16px;
 	line-height: 22px;
 	letter-spacing: 0.03em;
+}
+
+@media screen and (max-width: 767px) {
+	body .ui-tooltip.ui-widget-content {
+		max-width: 150px;
+		padding: 10px 15px;
+
+		font-size: 14px;
+		line-height: 21px;
+	}
 }
 
 .has-arrow {
@@ -9264,4 +9314,9 @@ body .ui-tooltip.ui-widget-content {
 	.jp-time-left {
 		margin-right: -10px;
 	}
+}
+
+.ui-dialog.subscribe-popup {
+	max-height: 90%;
+	overflow: hidden;
 }
